# ai-nutritionist

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  langgraph.json  main.py  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
docs/: devcontainer.md
src/ai_nutritionist/: logging.py  prompts.py  settings.py
src/ai_nutritionist/graph/: edges.py  graph.py  nodes.py  prompts.py  state.py
src/ai_nutritionist/graph/utils/: chains.py  helpers.py
src/ai_nutritionist/interfaces/: __init__.py  streamlit_app.py
src/ai_nutritionist/memory/: memory_manager.py  vector_store.py
tests/: test_edges.py  test_helpers.py
