[project]
name = "whatsapp_ai"
version = "0.0.1"
description = "Nutritionist AI Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "groq>=0.2.0",
    "langchain-community>=0.3.13",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.14",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.60",
    "pre-commit>=4.0.1",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "sentence-transformers>=3.3.1",
    "commitizen>=4.4.1"]