[tool.poetry]
name = "whatsapp_ai"
version = "0.1.0"
description = "Agentic Chatbot"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
groq = "^0.13.1"
langchain-community = "^0.3.13"
langchain-groq = "^0.2.0"
langchain-openai = "^0.2.14"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
langgraph = "^0.2.60"
pre-commit = "^4.0.1"
langgraph-checkpoint-sqlite = "^2.0.1"
sentence-transformers = "^3.3.1"
commitizen = "^4.4.1"
qdrant-client = "^1.13.3"
langgraph-cli = "^0.1.77"
langgraph-api = "^0.0.30"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.lint.dependencies]
ruff = "^0.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  'pyproject.toml:version'
  ]
tag_format = "v$major.$minor.$patch$prerelease"

